<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <me.singleneuron.locknotification.CustomCardView
                android:id="@+id/custom_cardView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:customTitle="@string/xposed_not_activated" />

            <me.singleneuron.locknotification.CustomCardView
                android:id="@+id/custom_cardView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:customTitle="@string/nevolution" />

            <me.singleneuron.locknotification.CustomCardView
                android:id="@+id/custom_cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:customTitle="@string/notification_not_allowed"
                app:customSummary="@string/notification_service_not_connect" />

            <androidx.core.widget.NestedScrollView
                android:id="@+id/content_frame3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>